--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>OUSL BSc Science - Search Results</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OUSL BSc Science - Past Papers</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,100 +20,112 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
       color: transparent;
-      margin-bottom: 20px;
+    }
+    img {
+      max-width: 300px;
+      height: auto;
+      margin: 10px auto;
+      display: block;
+    }
+    main {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     section {
       background: white;
       padding: 20px;
       border-radius: 12px;
-      max-width: 700px;
-      margin: 0 auto 30px;
+      max-width: 500px;
+      margin: 30px auto;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      text-align: left;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 10px;
-      text-align: left;
-    }
-    th {
-      background-color: #007cf0;
-      color: white;
     }
     a {
-      color: #0077cc;
+      font-size: 1.2em;
       text-decoration: none;
+      color: #0077cc;
+      font-weight: bold;
+      cursor: pointer;
     }
     a:hover {
+      color: #005fa3;
       text-decoration: underline;
     }
-    #backLink {
-      margin-top: 20px;
-      display: inline-block;
-      font-weight: bold;
-      color: #0077cc;
-      cursor: pointer;
-      text-decoration: none;
-    }
-    #backLink:hover {
-      text-decoration: underline;
+
+    #searchBox {
+      width: 100%;
+      max-width: 500px;
+      padding: 10px;
+      font-size: 1em;
+      margin: 20px auto;
+      border-radius: 8px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
 
-  <h1>Search Results</h1>
-  <section id="resultsSection">
-    <!-- results appear here -->
-  </section>
+  <main>
+    <h1>BSc Science - OUSL Past Papers</h1>
+    <img src="https://reginfo.ou.ac.lk/img/main.jpg" alt="Open University of Sri Lanka Logo" />
+    
+    <input type="text" id="searchBox" placeholder="Search Levels or Courses..." />
 
-  <a id="backLink" href="index.html">← Back to Search</a>
+    <section class="link-section">
+      <a href="level3.html" target="_blank" rel="noopener noreferrer">Go to LEVEL 3 Past Papers →</a>
+    </section>
+    <!-- Add more sections later -->
+  </main>
 
-  <script src="courses.js"></script>
-  <script>
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
+  <script src="courses.js"></script>  <!-- Your external courses data -->
 
-    function renderResults(subjectName) {
-      const resultSection = document.getElementById('resultsSection');
-      const subjectObj = coursesData.find(s => s.subject.toLowerCase() === subjectName.toLowerCase());
+<script>
+  window.onload = function () {
+    const searchBox = document.getElementById('searchBox');
 
-      if (!subjectObj) {
-        resultSection.innerHTML = `<p>No results found for <strong>${subjectName}</strong>.</p>`;
-        return;
+    // Your existing filtering code (keep it exactly)
+    searchBox.addEventListener('input', function () {
+      const query = searchBox.value.toLowerCase();
+
+      document.querySelectorAll('.link-section').forEach(section => {
+        const link = section.querySelector('a');
+        const text = link.textContent.toLowerCase();
+        section.style.display = text.includes(query) ? 'block' : 'none';
+      });
+    });
+
+    // Add this new event listener for Enter key to redirect to result.html if match found
+    searchBox.addEventListener('keydown', function (event) {
+      if (event.key === 'Enter') {
+        event.preventDefault();
+        const query = searchBox.value.trim().toLowerCase();
+        if (!query) return;
+
+        // Assuming your courses.js defines a global 'coursesData' array of subjects and courses
+        let matchedSubject = null;
+        for (const subjectObj of coursesData) {
+          if (subjectObj.subject.toLowerCase().includes(query)) {
+            matchedSubject = subjectObj.subject;
+            break;
+          }
+          for (const course of subjectObj.courses) {
+            if (course.code.toLowerCase().includes(query)) {
+              matchedSubject = subjectObj.subject;
+              break;
+            }
+          }
+          if (matchedSubject) break;
+        }
+
+        if (matchedSubject) {
+          window.location.href = `result.html?subject=${encodeURIComponent(matchedSubject)}`;
+        } else {
+          alert('No matching subject or course found.');
+        }
       }
+    });
+  };
+ </script>
 
-      let html = `<h2>${subjectObj.subject}</h2>`;
-      html += `<table>
-        <thead>
-          <tr><th>Course Code</th><th>CAT Paper</th><th>Final Paper</th></tr>
-        </thead><tbody>`;
-
-      for (const course of subjectObj.courses) {
-        html += `<tr>
-          <td>${course.code}</td>
-          <td>${course.cat === "#" ? 'No link' : `<a href="${course.cat}" target="_blank" rel="noopener noreferrer">CAT</a>`}</td>
-          <td>${course.final === "#" ? 'No link' : `<a href="${course.final}" target="_blank" rel="noopener noreferrer">Final</a>`}</td>
-        </tr>`;
-      }
-
-      html += `</tbody></table>`;
-      resultSection.innerHTML = html;
-    }
-
-    const subjectParam = getQueryParam('subject');
-    if (subjectParam) {
-      renderResults(subjectParam);
-    } else {
-      document.getElementById('resultsSection').innerHTML = '<p>No subject specified.</p>';
-    }
-  </script>
 </body>
 </html>
