--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
   <main>
     <h1>BSc Science - OUSL Past Papers</h1>
     <img src="https://reginfo.ou.ac.lk/img/main.jpg" alt="Open University of Sri Lanka Logo" />
-    
+  
     <input type="text" id="searchBox" placeholder="Search Levels or Courses..." />
 
     <section class="link-section">
-      <a href="level3.html" target="_blank" rel="noopener noreferrer">Go to LEVEL 3 Past Papers →</a>
+      <a href="level3.html">Go to LEVEL 3 Past Papers →</a>
     </section>
-    <!-- Add more sections later -->
   </main>
 
   <script src="courses.js"></script>  <!-- Your external courses data -->
