--- a/index.html
+++ b/index.html
@@ -128,14 +128,13 @@
 
   <!-- 📚 Disclaimer Box -->
   <div class="disclaimer-box">
-    <p>📚 This website was created <strong>for educational purposes only</strong> to simplify access to past exam papers from <a href="http://pqp.ou.ac.lk/" target="_blank">pqp.ou.ac.lk</a>.</p>
-    <p>🛑 No files are hosted here. All links direct you to the <strong>official university source</strong>.</p>
-    <p>✅ Use it to revise, study, and improve your academic success!</p>
-    <p>© 2025 – Educational Use Only</p>
+    <p>✅ This tool simply provides a <strong>faster way to access</strong> what is already publicly available on the <a href="http://pqp.ou.ac.lk/" target="_blank">pqp.ou.ac.lk</a>.</p>
+    <p>🛑 All rights to the content belong to OUSL.</p>
+    <p>💡 Use it responsibly for your academic preparation only.</p>
   </div>
 
   <footer>
-    <p>Powered by open resources for OUSL students. No affiliation with the university.</p>
+    <p>© 2025 – Educational Use Only</p>
   </footer>
 
   <script src="courses.js"></script>
