--- a/level3.html
+++ b/level3.html
@@ -159,7 +159,7 @@
     <div id="course-container"></div>
 
     <div class="footer">
-       <p>This website is made for educational purposes only.<br>© 2025 All rights reserved.</p>    </div>
+       <p>© 2025 – Educational Use Only.</p>    </div>
   </div>
 
   <script src="courses.js"></script>
