--- a/index.html
+++ b/index.html
@@ -71,15 +71,19 @@
     .disclaimer-box {
       margin: 40px auto;
       padding: 20px;
-      max-width: 600px;
+      max-width: 700px;
       border-radius: 12px;
       background: rgba(0, 0, 0, 0.6);
       color: #ffecb3;
       font-size: 0.95em;
       line-height: 1.6;
-      text-align: center;
+      text-align: left;
       border: 1px solid rgba(255, 255, 255, 0.3);
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .disclaimer-box p {
+      margin: 10px 0;
     }
 
     .disclaimer-box a {
@@ -109,6 +113,7 @@
       .disclaimer-box {
         margin: 20px;
         padding: 15px;
+        font-size: 0.9em;
       }
     }
   </style>
@@ -126,7 +131,7 @@
     </section>
   </main>
 
-  <!-- 📚 Disclaimer Box -->
+  <!-- 📚 Left-Aligned Disclaimer Box -->
   <div class="disclaimer-box">
     <p>✅ This tool simply provides a <strong>faster way to access</strong> what is already publicly available on the <a href="http://pqp.ou.ac.lk/" target="_blank">pqp.ou.ac.lk</a>.</p>
     <p>🛑 All rights to the content belong to OUSL.</p>
